# CPP_project

./: .envformat  .gitignore  CMakeLists.txt  Clubs and event management system2.pptx  GUI.py  Gourav Testing.cpp  Gourav Testing.hpp  admin.py  dbms_func.py  env.py  envformat.txt  event.py  gui2.py  main.cpp  mysql_data.py  oracle_data.py  runGUI.bat  tempCodeRunnerFile.py  test.db
Final Executable/: club.txt  event.txt  meeting.txt  recruitment.txt
cpp/: CMakeLists.txt
cpp/Final Executable/: club.txt  event.txt  meeting.txt  recruitment.txt
cpp/include/: AdminMenu.h  (+11 more)
include/: AdminClubInfoMenu.h  AdminClubMeetingMenu.h  AdminClubRecruitmentMenu.h  AdminEventMenu.h  AdminMenu.h  CMakeLists.txt  Club.h  ClubInfoMenu.h  ClubMenu.h  Event.h  EventMenu.h  Interface.h  MainMenu.h  Meeting.h
other/: club.txt  event.txt
others/: mysql_data.py  sqlite3_data.py
presentation/: {Auto}Clubs And Events Organizer.pptx
sql/: queries.sql
src/: AdminClubInfoMenu.cpp  AdminClubMeetingMenu.cpp  AdminClubRecruitmentMenu.cpp  AdminEventMenu.cpp  AdminMenu.cpp  CMakeLists.txt  Club.cpp  ClubInfoMenu.cpp  ClubMeetingMenu.cpp  ClubMenu.cpp  Event.cpp  EventMenu.cpp  MainMenu.cpp  Meeting.cpp  Recruitment.cpp  admin_club_info_menu.cpp  admin_club_meeting.cpp  admin_club_meeting_helper_functions.cpp  admin_club_recruitment_helper_functions.cpp  admin_event_helper_functions.cpp  admin_event_menu.cpp  admin_info_helper_functions.cpp  admin_menu_initiator.cpp  club_meeting_menu.cpp  club_menu_initiator.cpp  club_recruitment_menu.cpp  clubs_info_menu.cpp  event_menu_initiator.cpp
(+21 files in other folders)
